setup homeview && api stuff

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,6 +11,7 @@
 
 	--primary-color: #00AD3A;
 	--secondary-color: #35BD00;
+	--danger-color: lightcoral;
 	--normal-app-name-size: 1.7rem;
 	--bold: 'bold';
 
